[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Events.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -542, -131 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BatchTelemetryEventsButton" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Batch Telemetry Events"

[node name="BatchPlayStreamEventsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "Batch PlayStream Events"

[node name="WriteTelemetryDirectButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 68.0
text = "Write Telemetry Event (direct)"

[node name="WritePlayStreamDirectButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 92.0
text = "Write PlayStream Event (direct)"

[node name="Response" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/BatchTelemetryEventsButton" to="." method="_on_BatchTelemetryEventsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BatchPlayStreamEventsButton" to="." method="_on_BatchPlayStreamEventsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/WriteTelemetryDirectButton" to="." method="_on_WriteTelemetryDirectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/WritePlayStreamDirectButton" to="." method="_on_WritePlayStreamDirectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
